sender/build/log/idf_py_stdout_output_56112
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/hiep/Hiep/PBL/build/bootloader/esp-idf/esptool_py && /home/hiep/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/hiep/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/hiep/Hiep/PBL/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/feeder.c.obj
[4/10] Completed 'bootloader'
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/hiep/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/hiep/Hiep/PBL/build/config -I/home/hiep/Hiep/PBL/main -I/home/hiep/esp-idf/components/newlib/platform_include -I/home/hiep/esp-idf/components/freertos/config/include -I/home/hiep/esp-idf/components/freertos/config/include/freertos -I/home/hiep/esp-idf/components/freertos/config/xtensa/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/hiep/esp-idf/components/freertos/esp_additions/include -I/home/hiep/esp-idf/components/esp_hw_support/include -I/home/hiep/esp-idf/components/esp_hw_support/include/soc -I/home/hiep/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/hiep/esp-idf/components/esp_hw_support/dma/include -I/home/hiep/esp-idf/components/esp_hw_support/ldo/include -I/home/hiep/esp-idf/components/esp_hw_support/port/esp32/. -I/home/hiep/esp-idf/components/esp_hw_support/port/esp32/include -I/home/hiep/esp-idf/components/heap/include -I/home/hiep/esp-idf/components/log/include -I/home/hiep/esp-idf/components/soc/include -I/home/hiep/esp-idf/components/soc/esp32 -I/home/hiep/esp-idf/components/soc/esp32/include -I/home/hiep/esp-idf/components/hal/platform_port/include -I/home/hiep/esp-idf/components/hal/esp32/include -I/home/hiep/esp-idf/components/hal/include -I/home/hiep/esp-idf/components/esp_rom/include -I/home/hiep/esp-idf/components/esp_rom/include/esp32 -I/home/hiep/esp-idf/components/esp_rom/esp32 -I/home/hiep/esp-idf/components/esp_common/include -I/home/hiep/esp-idf/components/esp_system/include -I/home/hiep/esp-idf/components/esp_system/port/soc -I/home/hiep/esp-idf/components/esp_system/port/include/private -I/home/hiep/esp-idf/components/xtensa/esp32/include -I/home/hiep/esp-idf/components/xtensa/include -I/home/hiep/esp-idf/components/xtensa/deprecated_include -I/home/hiep/esp-idf/components/lwip/include -I/home/hiep/esp-idf/components/lwip/include/apps -I/home/hiep/esp-idf/components/lwip/include/apps/sntp -I/home/hiep/esp-idf/components/lwip/lwip/src/include -I/home/hiep/esp-idf/components/lwip/port/include -I/home/hiep/esp-idf/components/lwip/port/freertos/include -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/hiep/esp-idf/components/driver/deprecated -I/home/hiep/esp-idf/components/driver/i2c/include -I/home/hiep/esp-idf/components/driver/touch_sensor/include -I/home/hiep/esp-idf/components/driver/twai/include -I/home/hiep/esp-idf/components/driver/touch_sensor/esp32/include -I/home/hiep/esp-idf/components/esp_pm/include -I/home/hiep/esp-idf/components/esp_ringbuf/include -I/home/hiep/esp-idf/components/esp_driver_gpio/include -I/home/hiep/esp-idf/components/esp_driver_pcnt/include -I/home/hiep/esp-idf/components/esp_driver_gptimer/include -I/home/hiep/esp-idf/components/esp_driver_spi/include -I/home/hiep/esp-idf/components/esp_driver_mcpwm/include -I/home/hiep/esp-idf/components/esp_driver_ana_cmpr/include -I/home/hiep/esp-idf/components/esp_driver_i2s/include -I/home/hiep/esp-idf/components/esp_driver_sdmmc/include -I/home/hiep/esp-idf/components/sdmmc/include -I/home/hiep/esp-idf/components/esp_driver_sdspi/include -I/home/hiep/esp-idf/components/esp_driver_sdio/include -I/home/hiep/esp-idf/components/esp_driver_dac/include -I/home/hiep/esp-idf/components/esp_driver_rmt/include -I/home/hiep/esp-idf/components/esp_driver_tsens/include -I/home/hiep/esp-idf/components/esp_driver_sdm/include -I/home/hiep/esp-idf/components/esp_driver_i2c/include -I/home/hiep/esp-idf/components/esp_driver_uart/include -I/home/hiep/esp-idf/components/vfs/include -I/home/hiep/esp-idf/components/esp_driver_ledc/include -I/home/hiep/esp-idf/components/esp_driver_parlio/include -I/home/hiep/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/hiep/esp-idf/components/esp_wifi/include -I/home/hiep/esp-idf/components/esp_wifi/wifi_apps/include -I/home/hiep/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/hiep/esp-idf/components/esp_wifi/include/local -I/home/hiep/esp-idf/components/esp_event/include -I/home/hiep/esp-idf/components/esp_phy/include -I/home/hiep/esp-idf/components/esp_phy/esp32/include -I/home/hiep/esp-idf/components/esp_netif/include -I/home/hiep/esp-idf/components/esp_http_client/include -I/home/hiep/esp-idf/components/spiffs/include -I/home/hiep/esp-idf/components/esp_partition/include -I/home/hiep/esp-idf/components/nvs_flash/include -I/home/hiep/esp-idf/components/spi_flash/include -I/home/hiep/esp-idf/components/esp_adc/include -I/home/hiep/esp-idf/components/esp_adc/interface -I/home/hiep/esp-idf/components/esp_adc/esp32/include -I/home/hiep/esp-idf/components/esp_adc/deprecated/include -I/home/hiep/esp-idf/components/esp_timer/include -I/home/hiep/Hiep/PBL/managed_components/espressif__cjson/cJSON -I/home/hiep/esp-idf/components/esp_http_server/include -I/home/hiep/esp-idf/components/http_parser -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/hiep/Hiep/PBL=. -fmacro-prefix-map=/home/hiep/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/hiep/Hiep/PBL/main/main.c
/home/hiep/Hiep/PBL/main/main.c: In function 'initialize_sntp':
/home/hiep/Hiep/PBL/main/main.c:100:5: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
  100 |     sntp_setoperatingmode(SNTP_OPMODE_POLL);
      |     ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/hiep/Hiep/PBL/main/main.c:20:
/home/hiep/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/hiep/Hiep/PBL/main/main.c:102:5: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
  102 |     sntp_setservername(0, "pool.ntp.org");
      |     ^~~~~~~~~~~~~~~~~~
/home/hiep/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/hiep/Hiep/PBL/main/main.c:103:5: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
  103 |     sntp_setservername(1, "time.google.com");
      |     ^~~~~~~~~~~~~~~~~~
/home/hiep/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/hiep/Hiep/PBL/main/main.c:104:5: warning: 'sntp_init' is deprecated: use esp_sntp_init() instead [-Wdeprecated-declarations]
  104 |     sntp_init();
      |     ^~~~~~~~~
/home/hiep/esp-idf/components/lwip/include/apps/esp_sntp.h:269:6: note: declared here
  269 | void sntp_init(void)
      |      ^~~~~~~~~
/home/hiep/Hiep/PBL/main/main.c: In function 'servo_scheduler_task':
/home/hiep/Hiep/PBL/main/main.c:313:21: error: implicit declaration of function 'feeder_spin_once' [-Werror=implicit-function-declaration]
  313 |                     feeder_spin_once();
      |                     ^~~~~~~~~~~~~~~~
/home/hiep/Hiep/PBL/main/main.c: In function 'app_main':
/home/hiep/Hiep/PBL/main/main.c:406:20: warning: unused variable 'server' [-Wunused-variable]
  406 |     httpd_handle_t server = start_rest_server();
      |                    ^~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
